# mirror_gitlab_example

./: .editorconfig  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  Install.md  README.md  vcpkg.json
Sem1/CMake/: CMakeLists.txt  readme.txt
Sem1/CMake/Tests/: TestBoolean.cpp  TestCase.cpp  TestFor.cpp  TestIf.cpp  TestInteger.cpp  TestSTL1Iter.cpp  TestSTL2Seq.cpp  TestSTL3Alg.cpp  TestWhile.cpp
Sem1/CMake/src/: BooleanTasks.cpp  BooleanTasks.h  CaseTasks.cpp  ForTasks.cpp  ForTasks.h  IfTasks.cpp  IntegerTasks.cpp  STL1IterTasks.cpp  STL1IterTasks.h  STL2SeqTasks.cpp  STL2SeqTasks.h  STL3AlgTasks.cpp  STL3AlgTasks.h  WhileTasks.cpp  WhileTasks.h
Sem1/MSBuild/: MSBuild.sln
Sem1/MSBuild/Tests/: BooleanTests.cpp  TestCase.cpp  TestIf.cpp  TestInteger.cpp  TestSTL1Iter.cpp  TestSTL2Seq.cpp  TestWhile.cpp  Tests.vcxproj
Sem1/MSBuild/src/: BooleanTasks.cpp  BooleanTasks.h  CaseTasks.cpp  CaseTasks.h  ForTasks.cpp  IfTasks.cpp  IfTasks.h  IntegerTasks.cpp  IntegerTasks.h  STL1IterTasks.cpp  STL1IterTasks.h  STL2SeqTasks.cpp  STL2SeqTasks.h  STL3AlgTasks.cpp  WhileTasks.cpp  src.vcxproj  src.vcxproj.filters
Sem2/CMake/mycode-exe/: CMakeLists.txt  function.cpp  readme.txt
Sem2/CMake/mycode-tests/: CMakeLists.txt
Sem2/CMake/mycode-tests/src/: BooleanTasks.cpp  BooleanTasks.h
Sem2/CMake/mycode-tests/tests/: TestBoolean.cpp
Sem2/Calc/: CMakeLists.txt  CMakePresets.json
Sem2/Calc/.cursor/plans/: tz46_тепло_прогрев_9fc83079.plan.md
Sem2/Calc/documents/: h_profile.csv  p_profile.csv  Решение_задач_1_и_2.docx
Sem2/Calc/documents/TZ36/: plan.md  tz.md  Аналитическое_решение.md  Корректировка_условия.md
Sem2/Calc/documents/TZ46/: analitic.md  plan.md  task.md  tz.md
Sem2/Calc/documents/lab10-polymorfizm/:  logger_base_note.md  2_pp_pipe_plan.md  2_pp_pipe_tz.md  3_polymorfizm_plan.md  3_polymorfizm_tz.md
Sem2/Calc/documents/lab10-polymorphism/: 1_logger_base_note.md  1_logger_base_plan.md  1_logger_base_tz.md  2_pp_pipe_plan.md  2_pp_pipe_tz.md  3_pq_chain_plan.md  3_pq_chain_tz.md  4_pp_chain_plan.md  4_pp_chain_tz.md
Sem2/Calc/documents/lab9-numerical/: 1_basic_plan.md  1_basic_tz.md  2_criteria_plan.md  2_criteria_tz.md  3_exceptions_plan.md  3_exceptions_tz.md  4_numerical_derivative_plan.md  4_numerical_derivative_tz.md  5_analysis_plan.md  5_analysis_tz.md  6_polymorphism_plan.md  6_polymorphism_tz.md  7_validation_plan.md  7_validation_tz.md  План.md
Sem2/Calc/documents/pp_qp_tasks/: Решение_задач_1_и_2.docx
Sem2/Calc/src/: begining_tasks_hydraulics.cpp  begining_tasks_hydraulics.h  hydraulic_chain.cpp  hydraulic_chain.h  local_resistance.cpp  local_resistance.h  logger_base.h  numerical_methods.cpp  numerical_methods.h  pipe_oil.cpp  pipe_oil.h  pipe_thermal.cpp  pipe_thermal.h  pump.cpp  pump.h  tz36_chain_helpers.h
Sem2/Calc/test/: test_begining_tasks_hydraulics.cpp  test_hydraulic_chain.cpp  test_local_resistance.cpp  test_logger_base.cpp  test_numerical_methods.cpp  test_pipe_oil.cpp  test_pump.cpp  test_tz36_branching.cpp  test_tz46_thermal.cpp
Sem2/Calc_QP_PP_Solve/: CMakeLists.txt
Sem2/Calc_QP_PP_Solve/documents/: h_profile.csv  hydraulics_TZ_steps.md  p_profile.csv  zadacha_1_h_profile.csv  zadacha_1_p_profile.csv  zadacha_2_h_profile.csv  zadacha_2_p_profile.csv
Sem2/Calc_QP_PP_Solve/src/: begining_tasks_hydraulics.cpp  begining_tasks_hydraulics.h
Sem2/Calc_QP_PP_Solve/test/: test_begining_tasks_hydraulics.cpp
Sem2/Compilers/standalone-clang-mycode/: STL1Iter15.cpp  STL1Iter15.h  STL1Iter15.i  main.cpp  main.i  readme.txt
Sem2/Compilers/standalone-gcc-lecture-sample/: function.h  function.i  function.s  main.cpp  main.i  main.s  readme.txt
Sem2/Compilers/standalone-gcc-mycode/: STL1Iter15.cpp  STL1Iter15.i  STL1Iter15.s  main.i  main.s  name.txt  readme.txt
Sem2/Compilers/standalone-msvc-mycode/: STL1Iter15.i  main.i  readme.txt
pipeline/pipeline_scripts/: build.sh  push_to_github  run_tests.sh
